--- a/vt_nationalAuthority/Views/Group/vGroupPermision.cshtml
+++ b/vt_nationalAuthority/Views/Group/vGroupPermision.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DataAccessLayer.Models.functionModel>
+﻿@model List<DataAccessLayer.Models.FunctionModel>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 1;
