Revert "fix bugs"
This reverts commit d931c1243bb53d4e36a0760637ca3a8e1a92e277.

--- a/vt_nationalAuthority/Views/Group/vGroupPermision.cshtml
+++ b/vt_nationalAuthority/Views/Group/vGroupPermision.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DataAccessLayer.Models.FunctionModel>
+﻿@model List<DataAccessLayer.Models.functionModel>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 1;
